# duke

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CMakeLists.txt  COPYING  COPYING.md  COPYING.txt  INSTALL  INSTALL.md  Jamroot  LICENSE.Duke  Makefile  README  README.md  build-linux-gcc.sh  build-osx-darwin.sh  build-windows-mingw.bat  configure  edit.py  format_all_files.sh  pb.jam  project-config.jam  setup_thirdparty.sh  site-config.jam.example
src/duke/: ByteSwap.h  ByteSwap.hpp  CMakeLists.txt  Configuration.cpp  Configuration.h  Jamfile.v2  MapRemoveIf.h  NonCopyable.h  NonCopyable.hpp  Pool.h  Rational.h  StringUtils.cpp  StringUtils.h  StringUtils.hpp  TGA.cpp  TGA.h  VolatileTexture.cpp  config.h.in  duke.cpp  main.cpp
src/duke/animation/: Animation.cpp  Animation.h  Animation.hpp
src/duke/app/: Configuration.cpp  Jamfile.v2
src/duke/attributes/: Attribute.cpp  Attribute.h  Attribute.hpp  AttributeDescriptor.cpp  AttributeDescriptor.hpp  AttributeDisplay.cpp  AttributeDisplay.hpp  AttributeEntry.hpp  AttributeKey.hpp  AttributeKeys.cpp  AttributeKeys.h  AttributeKeys.hpp  AttributeTraits.hpp  AttributeType.cpp  AttributeType.hpp  Attributes.cpp  Attributes.h  Attributes.hpp  AttributesView.cpp  AttributesView.hpp  NewAttributes.hpp  PredefinedAttribute.hpp
src/duke/base/: ByteSwap.hpp  Check.hpp  NonCopyable.hpp  Slice.hpp  SmallBuffer.hpp  SmallVector.hpp  StackTrace.cpp  StackTrace.hpp  StringAppender.cpp  StringAppender.hpp  StringSlice.cpp  StringSlice.hpp  StringTemplate.cpp  StringTemplate.hpp  StringUtils.cpp  StringUtils.hpp
src/duke/benchmark/: Benchmark.cpp  Benchmark.h  Benchmark.hpp
src/duke/cmdline/: CmdLineParameters.cpp  CmdLineParameters.h  CmdLineParameters.hpp
src/duke/commands/: CommandDescription.cpp  CommandDescription.hpp  Commands.cpp  Commands.hpp  DescriptorSet.hpp
src/duke/disabled_tests/renderer/: Jamfile.v2
src/duke/disabled_tests/scripts/: Jamfile.v2
src/duke/engine/: ColorSpace.cpp  ColorSpace.h  ColorSpace.hpp  ConsoleIO.cpp  ConsoleIO.hpp  Context.cpp  Context.h  Context.hpp  Duke.cpp  Duke.h  DukeApplication.cpp  DukeApplication.h  DukeApplication.hpp  DukeMainWindow.cpp  DukeMainWindow.h  DukeMainWindow.hpp  DukeWindow.cpp  DukeWindow.h  FitMode.h  FitMode.hpp  Frame.h  Frame.hpp  ImageLoadUtils.cpp  ImageLoadUtils.h  ImageLoadUtils.hpp  LoadableTexture.cpp  LoadableTexture.h  MediaStream.cpp  Player.cpp  Player.h  Player.hpp  ShaderFactory.cpp  ShaderFactory.h  ShaderPool.h  TextOverlay.cpp  TextOverlay.h  TextRenderer.cpp  TextRenderer.h  TexturePool.h  Timeline.cpp  (+6 more)
src/duke/engine/cache/: ImageCache.h  LoadedImageCache.cpp  LoadedImageCache.h  LoadedImageCache.hpp  LoadedPboCache.cpp  LoadedPboCache.h  LoadedPboCache.hpp  LoadedTextureCache.cpp  LoadedTextureCache.h  LoadedTextureCache.hpp  PboCache.cpp  PboCache.h  PboPackedFrame.h  PboPackedFrame.hpp  PboPool.cpp  PboPool.h  PboPool.hpp  Pool.h  Pool.hpp  TexturePackedFrame.h  TexturePackedFrame.hpp  TexturePool.h  TexturePool.hpp  TimelineIterator.cpp  TimelineIterator.h  TimelineIterator.hpp
src/duke/engine/commands/: Commands.cpp  Commands.hpp
src/duke/engine/imagecache/: ImageCache.cpp  ImageCache.h  TimelineIterator.cpp  TimelineIterator.h
src/duke/engine/overlay/: AttributesOverlay.cpp  (+22 more)
src/duke/filesystem/: FsUtils.cpp  FsUtils.h  FsUtils.hpp  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedFile.hpp
src/duke/gl/: Buffer.hpp  Buffers.h  GL.h  GL.hpp  GLUtils.cpp  GLUtils.h  GLUtils.hpp  GenericBuffer.h  GlFwApp.cpp  GlFwApp.h  GlFwApp.hpp  GlObjects.cpp  GlObjects.h  GlObjects.hpp  GlObjectsDetails.h  GlObjectsDetails.hpp  GlUtils.cpp  GlUtils.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Program.cpp  Program.hpp  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Shader.hpp  Texture.h  Textures.cpp  Textures.h  Textures.hpp  VertexArrayBuffer.h
src/duke/image/: Channel.cpp  Channel.hpp  ChannelDescription.hpp  ChannelType.hpp  FrameData.cpp  FrameData.hpp  FrameDescriptionAndAttributes.hpp  ImageDescription.hpp  ImageUtils.cpp  ImageUtils.hpp
src/duke/imageio/: Attribute.cpp  Attribute.h  Attributes.h  DukeIO.cpp  DukeIO.h  DukeIO.hpp  FrameData.hpp  FrameDescriptionAndAttributes.hpp  IIOOperation.hpp  ImageDescription.h  ImageLoadUtils.cpp  ImageLoadUtils.hpp  PackedFrame.h  PackedFrameDescription.h  PackedFrameDescription.hpp  PackedFrameDescriptionAndAttributes.h  PackedFrameDescriptionAndAttributes.hpp  RawPackedFrame.h  RawPackedFrame.hpp
src/duke/io/: IIOOperation.hpp  IO.cpp  IO.hpp  ImageLoadUtils.cpp  ImageLoadUtils.hpp  MemoryMappedFile.cpp  MemoryMappedFile.h
src/duke/libraries/: Jamfile.v2
src/duke/math/: Rational.hpp  common_factor_rt.hpp
src/duke/memory/: Allocator.cpp  Allocator.h  Allocator.hpp  AvailableMemory.cpp  AvailableMemory.h  AvailableMemory.hpp  PageSize.cpp  PageSize.h  PageSize.hpp
src/duke/playback/: Player.cpp  Player.h
src/duke/plugins/: Jamfile.v2  README
src/duke/shading/: ShadingModel.cpp  ShadingModel.hpp  ShadingUtils.cpp  ShadingUtils.hpp
src/duke/streams/: DiskMediaStream.cpp  DiskMediaStream.hpp  FileSequenceStream.hpp  FilesStreams.cpp  IMediaStream.hpp  MediaFrameReference.hpp  SingleFileStream.hpp
src/duke/submodules/: Jamfile.v2
src/duke/time/: Clock.cpp  Clock.h  Clock.hpp  FrameUtils.cpp  FrameUtils.h  FrameUtils.hpp  Timeline.cpp  Timeline.h
src/duke/timeline/: Timeline.cpp  Timeline.h
src/duke/utils/: NonCopyable.h
test/: CMakeLists.txt  alloc.cpp  animation.cpp  attribute.cpp  attribute_display.cpp  attribute_traits.cpp  attributes.cpp  attributes_view.cpp  cmdline.cpp  frameutils.cpp  fsutils.cpp  gl.cpp  gl_utils.cpp  image_utils.cpp  playback.cpp  predefined_attributes.cpp  range.cpp  rational.cpp  shading.cpp  slice.cpp  small_buffer.cpp  small_vector.cpp  smallbuffer.cpp  string_appender.cpp  string_slice.cpp  string_template.cpp  string_utils.cpp  stringutils.cpp  texturepool.cpp  timeline.cpp  timelineiterator.cpp
test/attributes/: attributes.cpp
test/memory/: alloc.cpp
test/timeline/: timeline.cpp
(+759 files in other folders)
